<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="User Name"
            android:id="@+id/user"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            android:id="@+id/password" android:password="true"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/errorMessage" android:textColor="#CC0000"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:id="@+id/signIn"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:onClick="signUp"
            android:id="@+id/signUp"/>
    <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:onClick="forgotPassword"
            android:id="@+id/forgotPassword"/>
</LinearLayout>